--- a/package.json
+++ b/package.json
@@ -18,18 +18,22 @@
     "type": "git",
     "url": "https://github.com/openshift/origin-server"
   },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
-  "dependencies": {
-    "express": "~3.4.4"
+  "scripts": {
+    "dev": "nodemon src/server.js"
   },
-  "devDependencies": {},
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "4.15.3",
+    "mongodb": "^2.2.30"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  },
   "bundleDependencies": [],
-
   "private": true,
-  "main": "server.js"
+  "main": "src/server.js"
 }
