Update package json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "OpenShift-Sample-App",
   "version": "1.0.0",
-  "description": "OpenShift Sample Application",
+  "description": "NodeJS general purpose",
   "keywords": [
     "OpenShift",
     "Node.js",
@@ -9,15 +9,10 @@
     "openshift"
   ],
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+    "name": "Fabio Siliberto",
+    "email": "fabio.siliberto@gmail.com"
   },
   "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
-  },
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
