--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": ">= 1.0.0"
   },
   "scripts": {
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
