--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "homepage": "http://www.openshift.com/",
   "engines": {
-    "node": ">= 8.6.0",
-    "npm": ">= 5.3.0"
+    "node": "= 8.6.0",
+    "npm": "= 5.3.0"
   },
   "scripts": {
     "start": "node src/server.js",
