--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "body-parser": "^1.17.2",
     "express": "4.15.3",
     "mongodb": "^2.2.30",
-    "pug": "^2.0.0-rc.2"
+    "pug": "^2.0.0-rc.2",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
