--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "4.15.3",
-    "mongodb": "^2.2.30",
-    "pug": "^2.0.0-rc.2",
-    "socket.io": "^2.0.4"
+    "body-parser": "^1.19.0",
+    "express": "^4.15.3",
+    "mongodb": "^3.2.7",
+    "pug": "^2.0.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
